syntax = "proto3";

package auth;

option go_package = "pb/";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string phone = 4;
  string kind = 5;
  string description = 6;
}

message RegisterResponse {
  string message = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}